--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "components/coap/libcoap"]
 	path = components/coap/libcoap
 	url = ../../obgm/libcoap.git
+[submodule "components/esptool_py/esptool"]
+	path = components/esptool_py/esptool
+	url = https://github.com/espressif/esptool.git
